--- a/index.html
+++ b/index.html
@@ -1,63 +1,8 @@
-<!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Praktikum Isyarat dan Sistem 2 by X3Antoni</title>
-
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
-    <meta name="viewport" content="width=device-width">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <h1>Praktikum Isyarat dan Sistem 2</h1>
-        <p>mostly handout, question test, and answer sheet.</p>
-
-        <p class="view"><a href="https://github.com/X3Antoni/isis2">View the Project on GitHub <small>X3Antoni/isis2</small></a></p>
-
-
-        <ul>
-          <li><a href="https://github.com/X3Antoni/isis2/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/X3Antoni/isis2/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/X3Antoni/isis2">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
-        <h1>
-<a id="isyarat-dan-sistem-2" class="anchor" href="#isyarat-dan-sistem-2" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Isyarat dan Sistem 2</h1>
-
-<p>Bobot Asistensi: 20%</p>
-
-<ul>
-<li>10% - Praktikum (2% per topik)</li>
-<li>10% - Responsi</li>
-</ul>
-
-<h1></h1>
-
-<p>Untuk mengunduh semua file, klik tombol warna hijau [Clone or download], lalu klik Download ZIP.</p>
-
-<p>File <code>kunci_jawaban_a.ipynb</code> dan <code>kunci_jawaban_b.ipynb</code> hanya bisa diakses di web-browser. Untuk membuka file tersebut tinggal klik, lalu tunggu. Nanti akan keluar hasil render-an dari GitHub.</p>
-
-<p>Q: Adakan versi word-nya untuk <code>kunci_jawaban</code>?
-A: Hmmm... tidak untuk dalam waktu dekat ini.</p>
-
-<h2>
-<a id="pengumuman" class="anchor" href="#pengumuman" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Pengumuman!</h2>
-
-<p>Jika segalanya dimudahkan oleh YMK (-_-) hari Jumat minggu depan (25/11) aku share nilai praktikum kalian.</p>
-      </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/X3Antoni">X3Antoni</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
-    </div>
-    <script src="javascripts/scale.fix.js"></script>
-    
-  </body>
-</html>
+---
+layout: default
+title: Markus Antoni
+---
+<div class="blurb">
+	<h1>Test some new website!</h1>
+	<p>Recently I notice that GitHub also can make a website, it was called GitHub Pages. Now I'm trying this features.</p>
+</div><!-- /.blurb -->
